Configurei views post_detail  adicionei arquivo post_detail.html

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,15 @@
+{% extends 'blog/base.html' %}
 
-<html>
-    <head>
-        <title>Ajudaqui</title>
-    </head>
-    <body>
-        <h1><a href="/">
-            Anúncios de Serviços
-        </a></h1>
-        <div>
-            {% for Anuncio in anuncios %}
-            <div>
-                <h2><a href="">{{ Anuncio.tipoSv }}</a></h2>
-                <p>{{ Anuncio.descSv }}</p>
-                <p>Telefone: {{ Anuncio.telefone }}</p>
-                <p>Email: {{ Anuncio.email }}</p>
-                <p>Publicado: {{ Anuncio.data_publicacao }}</p>
+{% block content %}
+    {% for Anuncio in anuncios %}
+        <div class="anuncios">
+            <div class="data">
+                <p>Publicado por {{ Anuncio.autor }} em: {{ Anuncio.data_publicacao}}.</p>
             </div>
-            {% endfor %}
+            <h2><a href="{% url 'post_detail' pk=Anuncio.pk %}">{{ Anuncio.tipoSv }}</a></h2>
+            <p>{{ Anuncio.descSv|linebreaksbr }}</p>
+            <p>Telefone: {{ Anuncio.telefone }}</p>
+           <p>Email: {{ Anuncio.email }}</p>
         </div>
+    {% endfor %}
+{% endblock %}
