--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,6 +7,9 @@
                 {{ anuncio.data_publicacao }}
             </div>
         {% endif %}
+        {% if user.is_authenticated %}        
+        <a class="btn btn-default" href="{% url 'post_edit' pk=anuncio.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+        {% endif %}
         <h2>{{ anuncio.tipoSv }}</h2>
         <p>{{ anuncio.descSv|linebreaksbr }}</p>
     </div>
