--- a/anuncio/templates/anuncio/anuncio_list.html
+++ b/anuncio/templates/anuncio/anuncio_list.html
@@ -3,15 +3,13 @@
 {% block title %}- Anúncios{% endblock %}
 
 {% block content %}
-    <div ckass="conteiner dashboard">
+    <div class="container dashboard">
         <div class="col-4 dashboard-box" id="dashboard-anunciosativos">
             <h4>Anuncios Ativos</h4>
             <span>0</span>
         </div>
-    </div>
-    <div ckass="conteiner dashboard">
-        <div class="col-4 dashboard-box" id="dashboard-">
-            <h4>Anuncios Ativos</h4>
+        <div class="col-4 dashboard-box" id="dashboard-solicitacontato">
+            <h4>Solicitações de Contato</h4>
             <span>0</span>
         </div>
     </div>
