--- a/anuncio/templates/anuncio/anuncio_list.html
+++ b/anuncio/templates/anuncio/anuncio_list.html
@@ -6,7 +6,7 @@
     <div class="container dashboard">
         <div class="col-4 dashboard-box" id="dashboard-anunciosativos">
             <h4>Anuncios Ativos</h4>
-            <span>0</span>
+            <span>{{ anuncios_ativos }}</span>
         </div>
         <div class="col-4 dashboard-box" id="dashboard-solicitacontato">
             <h4>Solicitações de Contato</h4>
