--- a/anuncio/static/CSS/anuncio.css
+++ b/anuncio/static/CSS/anuncio.css
@@ -16,6 +16,36 @@
     width: 100%;
 }
 
+.container fluid {
+    padding: 0%;
+}
+
+/* meio */
+
+/* rodapé */
+.rodape {
+    background-color: rgb(4, 4, 94);
+    height: 200px;
+    border-top: 2px solid rgb(1, 34, 84);
+}
+
+.roda-itens{
+    color: black;
+    text-align: center;
+    font-family: Arial black;
+}
+
+footer p {
+    color: #f5f5ff;
+    text-align: center;
+    top: 500%;
+    position: relative;
+}
+
+.pe {
+    text-align: center;
+}
+
 .dashboard-box {
     float: left;
     background-color: #dfdfdf;
