--- a/anuncio/static/CSS/anuncio.css
+++ b/anuncio/static/CSS/anuncio.css
@@ -1,32 +1,71 @@
-/* CONFIGURAÇÃO DA DASHBOARD */
+h1,
+h2,
+h3,
+h4 {
+    font-family: Arial;
 
-.dashboard {
-    padding: 0;
-    width: 100%;
-    display: block;
+
 }
 
-.dashboard h4 {
-    font-size: 20px;
+/* NavBar */
+.navbar-brand{
+    font-family: 'Times New Roman'
 }
 
-.dashboard span {
-    font-size: 40px;
-    display: block;
-    width: 100%;
+.centralizar{
+    position:absolute; 
+    top:50%;
+    left:80%;
+    transform: translate(-50%, -50%);
+    
 }
 
-.container fluid {
+/* meio home */
+div.image{
+    height: 100vh;
+    background-color: navy;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+div.main{
+   font-family: Segoe UI;
+   font-size: 40px; 
+   color: #000000;
+   font-variant-position: center;
+}
+div.main p{
+    font-family: Segoe UI;
+    font-size: 32px; 
+    color: #000000;
+    font-variant-position: center;
+ }
+
+/* meio anuncio */
+
+
+/* form*/
+
+.row {
+    align-content: center;
+}
+
+/* login */
+
+.auth-card {
+    margin-bottom: 30px;
+}
+
+.login-div {
     padding: 0%;
 }
 
-/* meio */
-
 /* rodapé */
 .rodape {
-    background-color: rgb(4, 4, 94);
+    background-image: linear-gradient(to bottom, rgb(30, 30, 37), black);
     height: 200px;
-    border-top: 2px solid rgb(1, 34, 84);
+    border-top: 2px solid rgb(4, 7, 12);
 }
 
 .roda-itens{
@@ -46,13 +85,3 @@ footer p {
     text-align: center;
 }
 
-.dashboard-box {
-    float: left;
-    background-color: #dfdfdf;
-    color: #fff;
-    padding: 20px;
-    box-sizing: border-box;
-    height: 130px;
-    width: 32%;
-    text-align: center;
-}
