--- a/anuncio/templates/anuncio/anuncio_form.html
+++ b/anuncio/templates/anuncio/anuncio_form.html
@@ -5,7 +5,8 @@
 {% block subtitle %}- Criar Anúncio{% endblock %}
 
 {% block content %}
-     <div class="row">
+      <br>
+    <div class="row">
         <div class="col-md-5 mx-auto">
             <form action="" method="POST" >
 
@@ -14,9 +15,12 @@
                 {{ form|crispy }}
                  
                 <br>
-                <button type="submit" class="btn btn-outline-success">Criar anuncio</button>
-                <input type="reset" class="btn btn-danger" onclick="location.href = '{% url 'anuncio:anuncioList' %}'", value="Cancelar" >
+                <div class="alhinhar" style="text-align: center">
+                    <button type="submit" class="btn btn-success">Criar anuncio</button>
+                    <input type="reset" class="btn btn-danger" onclick="location.href = '{% url 'anuncio:anuncioList' %}'", value="Cancelar">
+                </div>
             </form>
         </div> 
-    </div>    
+    </div> 
+    <br>   
 {% endblock %}
